Adds shared zod validation for client and server
